--- a/supercluster/Base.lproj/Main.storyboard
+++ b/supercluster/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="6254" systemVersion="14C109" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="vXZ-lx-hvc">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="6254" systemVersion="14C109" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="w0D-fV-xx9">
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6247"/>
         <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
@@ -17,7 +17,7 @@
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                         <subviews>
-                            <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="cXQ-dY-NQm">
+                            <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" directionalLockEnabled="YES" showsHorizontalScrollIndicator="NO" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="cXQ-dY-NQm">
                                 <rect key="frame" x="0.0" y="0.0" width="600" height="605"/>
                                 <color key="backgroundColor" red="0.94509803921568625" green="0.94509803921568625" blue="0.94509803921568625" alpha="1" colorSpace="calibratedRGB"/>
                                 <collectionViewLayout key="collectionViewLayout" id="znK-yq-r3A" customClass="RFQuiltLayout"/>
@@ -76,6 +76,82 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="x5A-6p-PRh" sceneMemberID="firstResponder"/>
             </objects>
+        </scene>
+        <!--Map View Controller-->
+        <scene sceneID="WiQ-af-l4u">
+            <objects>
+                <viewController id="w0D-fV-xx9" customClass="MapViewController" customModule="supercluster" customModuleProvider="target" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="qtf-l3-XS1"/>
+                        <viewControllerLayoutGuide type="bottom" id="7O6-Ad-r00"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="NYC-pZ-Euf">
+                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <mapView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" mapType="standard" translatesAutoresizingMaskIntoConstraints="NO" id="fdV-Za-hRI">
+                                <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                            </mapView>
+                            <view alpha="0.94999999999999996" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="YKY-U3-CaR">
+                                <rect key="frame" x="0.0" y="0.0" width="600" height="20"/>
+                                <color key="backgroundColor" red="0.1098039225" green="0.14509804549999999" blue="0.19607843459999999" alpha="1" colorSpace="calibratedRGB"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="20" id="lie-yp-VBQ"/>
+                                </constraints>
+                            </view>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="WVf-te-9da" customClass="ClusterView" customModule="supercluster" customModuleProvider="target">
+                                <rect key="frame" x="270" y="270" width="60" height="60"/>
+                                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                                <color key="tintColor" red="1" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                                <gestureRecognizers/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="60" id="b4A-Ff-aEy"/>
+                                    <constraint firstAttribute="height" constant="60" id="m1b-iF-qoX"/>
+                                </constraints>
+                                <userDefinedRuntimeAttributes>
+                                    <userDefinedRuntimeAttribute type="number" keyPath="rotationDuration">
+                                        <real key="value" value="2"/>
+                                    </userDefinedRuntimeAttribute>
+                                    <userDefinedRuntimeAttribute type="boolean" keyPath="rotatesClockwise" value="NO"/>
+                                </userDefinedRuntimeAttributes>
+                                <connections>
+                                    <outletCollection property="gestureRecognizers" destination="6ep-hk-KWr" appends="YES" id="vKf-Rz-Bk2"/>
+                                    <outletCollection property="gestureRecognizers" destination="6ep-hk-KWr" appends="YES" id="7Zs-eL-Cdt"/>
+                                </connections>
+                            </view>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="YKY-U3-CaR" firstAttribute="leading" secondItem="NYC-pZ-Euf" secondAttribute="leadingMargin" constant="-16" id="4my-vi-Ld1"/>
+                            <constraint firstItem="WVf-te-9da" firstAttribute="centerX" secondItem="fdV-Za-hRI" secondAttribute="centerX" id="8wL-sR-P4P"/>
+                            <constraint firstItem="WVf-te-9da" firstAttribute="centerY" secondItem="fdV-Za-hRI" secondAttribute="centerY" id="AhS-xj-3D1"/>
+                            <constraint firstItem="fdV-Za-hRI" firstAttribute="top" secondItem="NYC-pZ-Euf" secondAttribute="topMargin" id="afp-7f-hL7"/>
+                            <constraint firstItem="YKY-U3-CaR" firstAttribute="top" secondItem="NYC-pZ-Euf" secondAttribute="topMargin" id="anP-YM-uaW"/>
+                            <constraint firstItem="7O6-Ad-r00" firstAttribute="top" secondItem="fdV-Za-hRI" secondAttribute="bottom" id="gtz-Cy-yo4"/>
+                            <constraint firstItem="fdV-Za-hRI" firstAttribute="leading" secondItem="NYC-pZ-Euf" secondAttribute="leadingMargin" constant="-16" id="hPo-6h-uex"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="YKY-U3-CaR" secondAttribute="trailing" constant="-16" id="nMi-uy-XuG"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="fdV-Za-hRI" secondAttribute="trailing" constant="-16" id="uTA-tA-FgQ"/>
+                        </constraints>
+                    </view>
+                    <connections>
+                        <outlet property="clusterDoubleTapGestureRecognizer" destination="6ep-hk-KWr" id="qgX-pt-IfK"/>
+                        <outlet property="clusterSingleTapGestureRecognizer" destination="lWH-hg-hi5" id="gte-GH-uhf"/>
+                        <outlet property="mapView" destination="fdV-Za-hRI" id="bLr-8T-biY"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="RUo-cp-lLn" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                <tapGestureRecognizer id="lWH-hg-hi5">
+                    <connections>
+                        <action selector="clusterWasTapped:" destination="w0D-fV-xx9" id="bFq-pe-TH8"/>
+                    </connections>
+                </tapGestureRecognizer>
+                <tapGestureRecognizer numberOfTapsRequired="2" id="6ep-hk-KWr">
+                    <connections>
+                        <action selector="clusterWasTapped:" destination="w0D-fV-xx9" id="cfo-MK-oho"/>
+                    </connections>
+                </tapGestureRecognizer>
+            </objects>
+            <point key="canvasLocation" x="1309" y="44"/>
         </scene>
     </scenes>
 </document>
