--- a/supercluster/Post Views/TextPostView.xib
+++ b/supercluster/Post Views/TextPostView.xib
@@ -19,10 +19,10 @@
                                 <constraint firstAttribute="height" constant="21" id="iaO-dr-9gR"/>
                             </constraints>
                             <fontDescription key="fontDescription" name="Avenir-Roman" family="Avenir" pointSize="15"/>
-                            <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                            <color key="textColor" red="0.93725490196078431" green="0.21568627450980393" blue="0.43529411764705883" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                             <nil key="highlightedColor"/>
                         </label>
-                        <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="gSd-bl-0Rs">
+                        <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="gSd-bl-0Rs" customClass="LazyImageView" customModule="supercluster" customModuleProvider="target">
                             <rect key="frame" x="5" y="5" width="30" height="30"/>
                             <constraints>
                                 <constraint firstAttribute="width" constant="30" id="hCO-WP-vcD"/>
@@ -37,7 +37,7 @@
                             </constraints>
                         </imageView>
                     </subviews>
-                    <color key="backgroundColor" red="1" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                    <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                     <constraints>
                         <constraint firstAttribute="height" constant="40" id="7ce-7Y-UJY"/>
                         <constraint firstItem="gSd-bl-0Rs" firstAttribute="leading" secondItem="aeD-vg-peK" secondAttribute="leading" constant="5" id="8oI-on-wYE"/>
@@ -57,8 +57,8 @@
                             <constraints>
                                 <constraint firstAttribute="height" constant="21" id="ktR-a1-E1r"/>
                             </constraints>
-                            <fontDescription key="fontDescription" name="Avenir-Book" family="Avenir" pointSize="10"/>
-                            <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                            <fontDescription key="fontDescription" name="Avenir-Book" family="Avenir" pointSize="8"/>
+                            <color key="textColor" red="0.60784313725490191" green="0.60784313725490191" blue="0.60784313725490191" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                             <nil key="highlightedColor"/>
                         </label>
                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Kq4-U9-6Po">
@@ -66,12 +66,12 @@
                             <constraints>
                                 <constraint firstAttribute="height" constant="21" id="Xqr-MM-22c"/>
                             </constraints>
-                            <fontDescription key="fontDescription" type="system" pointSize="10"/>
-                            <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                            <fontDescription key="fontDescription" type="system" pointSize="8"/>
+                            <color key="textColor" red="0.60784313725490191" green="0.60784313725490191" blue="0.60784313725490191" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                             <nil key="highlightedColor"/>
                         </label>
                     </subviews>
-                    <color key="backgroundColor" red="1" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                    <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                     <constraints>
                         <constraint firstAttribute="height" constant="30" id="32T-Fb-wgW"/>
                         <constraint firstItem="dcI-zg-GlB" firstAttribute="leading" secondItem="I5k-11-BUa" secondAttribute="leading" constant="5" id="3b4-Ce-J2w"/>
@@ -82,7 +82,7 @@
                         <constraint firstAttribute="bottom" secondItem="dcI-zg-GlB" secondAttribute="bottom" constant="5" id="XTK-vG-qjf"/>
                     </constraints>
                 </view>
-                <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="HRG-e0-hWM">
+                <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" editable="NO" selectable="NO" translatesAutoresizingMaskIntoConstraints="NO" id="HRG-e0-hWM">
                     <rect key="frame" x="0.0" y="40" width="175" height="75"/>
                     <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                     <string key="text">Lorem ipsum dolor sit er elit lamet, consectetaur cillium adipisicing pecu, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Nam liber te conscient to factor tum poen legum odioque civiuda.</string>
@@ -114,6 +114,14 @@
                     <real key="value" value="2"/>
                 </userDefinedRuntimeAttribute>
             </userDefinedRuntimeAttributes>
+            <connections>
+                <outlet property="avatarView" destination="gSd-bl-0Rs" id="xKi-lc-3qN"/>
+                <outlet property="handleLabel" destination="hvz-Ey-Igo" id="uO3-Bs-OPN"/>
+                <outlet property="placeLabel" destination="Kq4-U9-6Po" id="iKj-yt-UcO"/>
+                <outlet property="pubdateLabel" destination="dcI-zg-GlB" id="5ng-QS-1Nh"/>
+                <outlet property="sourceIconView" destination="45J-Hb-Xir" id="7Ot-H1-YYW"/>
+                <outlet property="textView" destination="HRG-e0-hWM" id="dIM-PT-T21"/>
+            </connections>
             <point key="canvasLocation" x="198.5" y="203.5"/>
         </view>
     </objects>
