--- a/supercluster/Base.lproj/Main.storyboard
+++ b/supercluster/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="6254" systemVersion="14C109" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="vXZ-lx-hvc">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="6254" systemVersion="14C109" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="w0D-fV-xx9">
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6247"/>
         <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
@@ -102,67 +102,61 @@
                                     <constraint firstAttribute="height" constant="20" id="lie-yp-VBQ"/>
                                 </constraints>
                             </view>
-                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="WVf-te-9da" customClass="ClusterView" customModule="supercluster" customModuleProvider="target">
-                                <rect key="frame" x="240" y="250" width="120" height="120"/>
+                            <view userInteractionEnabled="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="pKD-Nh-s6Q" customClass="RingView" customModule="supercluster" customModuleProvider="target">
+                                <rect key="frame" x="200" y="200" width="200" height="200"/>
                                 <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                                 <color key="tintColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                                <gestureRecognizers/>
                                 <constraints>
-                                    <constraint firstAttribute="width" constant="120" id="b4A-Ff-aEy"/>
-                                    <constraint firstAttribute="height" constant="120" id="m1b-iF-qoX"/>
+                                    <constraint firstAttribute="width" constant="200" id="hCi-zj-Adq"/>
+                                    <constraint firstAttribute="height" constant="200" id="pKa-l2-dlD"/>
                                 </constraints>
                                 <userDefinedRuntimeAttributes>
-                                    <userDefinedRuntimeAttribute type="number" keyPath="rotationDuration">
-                                        <real key="value" value="4"/>
-                                    </userDefinedRuntimeAttribute>
-                                    <userDefinedRuntimeAttribute type="boolean" keyPath="rotatesClockwise" value="YES"/>
-                                    <userDefinedRuntimeAttribute type="size" keyPath="shadowOffset">
-                                        <size key="value" width="0.0" height="0.0"/>
-                                    </userDefinedRuntimeAttribute>
-                                    <userDefinedRuntimeAttribute type="number" keyPath="shadowRadius">
-                                        <real key="value" value="1"/>
-                                    </userDefinedRuntimeAttribute>
-                                    <userDefinedRuntimeAttribute type="color" keyPath="shadowColor">
-                                        <color key="value" red="0.60784313725490191" green="0.60784313725490191" blue="0.60784313725490191" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                    <userDefinedRuntimeAttribute type="number" keyPath="borderWidth">
+                                        <real key="value" value="6"/>
                                     </userDefinedRuntimeAttribute>
                                 </userDefinedRuntimeAttributes>
-                                <connections>
-                                    <outletCollection property="gestureRecognizers" destination="6ep-hk-KWr" appends="YES" id="vKf-Rz-Bk2"/>
-                                    <outletCollection property="gestureRecognizers" destination="6ep-hk-KWr" appends="YES" id="7Zs-eL-Cdt"/>
-                                </connections>
+                            </view>
+                            <view userInteractionEnabled="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="O5s-Lm-PSF" customClass="RingView" customModule="supercluster" customModuleProvider="target">
+                                <rect key="frame" x="297.5" y="297.5" width="5" height="5"/>
+                                <color key="backgroundColor" red="0.13333333333333333" green="0.74509803921568629" blue="0.80000000000000004" alpha="0.20000000000000001" colorSpace="custom" customColorSpace="sRGB"/>
+                                <color key="tintColor" red="0.1333333333" green="0.74509803919999995" blue="0.80000000000000004" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="5" id="9L2-tZ-1SU"/>
+                                    <constraint firstAttribute="height" constant="5" id="ne4-qS-BgB"/>
+                                </constraints>
+                                <userDefinedRuntimeAttributes>
+                                    <userDefinedRuntimeAttribute type="number" keyPath="borderWidth">
+                                        <real key="value" value="6"/>
+                                    </userDefinedRuntimeAttribute>
+                                </userDefinedRuntimeAttributes>
                             </view>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
                             <constraint firstItem="YKY-U3-CaR" firstAttribute="leading" secondItem="NYC-pZ-Euf" secondAttribute="leadingMargin" constant="-16" id="4my-vi-Ld1"/>
-                            <constraint firstItem="WVf-te-9da" firstAttribute="centerX" secondItem="fdV-Za-hRI" secondAttribute="centerX" id="8wL-sR-P4P"/>
-                            <constraint firstItem="WVf-te-9da" firstAttribute="centerY" secondItem="fdV-Za-hRI" secondAttribute="centerY" constant="10" id="AhS-xj-3D1"/>
+                            <constraint firstItem="pKD-Nh-s6Q" firstAttribute="centerY" secondItem="fdV-Za-hRI" secondAttribute="centerY" id="CDu-iS-Cm1"/>
+                            <constraint firstItem="pKD-Nh-s6Q" firstAttribute="centerX" secondItem="fdV-Za-hRI" secondAttribute="centerX" id="Ko9-8I-167"/>
+                            <constraint firstItem="fdV-Za-hRI" firstAttribute="centerY" secondItem="O5s-Lm-PSF" secondAttribute="centerY" id="Rws-UT-ckZ"/>
                             <constraint firstItem="fdV-Za-hRI" firstAttribute="top" secondItem="NYC-pZ-Euf" secondAttribute="topMargin" id="afp-7f-hL7"/>
                             <constraint firstItem="YKY-U3-CaR" firstAttribute="top" secondItem="NYC-pZ-Euf" secondAttribute="topMargin" id="anP-YM-uaW"/>
                             <constraint firstItem="7O6-Ad-r00" firstAttribute="top" secondItem="fdV-Za-hRI" secondAttribute="bottom" id="gtz-Cy-yo4"/>
                             <constraint firstItem="fdV-Za-hRI" firstAttribute="leading" secondItem="NYC-pZ-Euf" secondAttribute="leadingMargin" constant="-16" id="hPo-6h-uex"/>
                             <constraint firstAttribute="trailingMargin" secondItem="YKY-U3-CaR" secondAttribute="trailing" constant="-16" id="nMi-uy-XuG"/>
                             <constraint firstAttribute="trailingMargin" secondItem="fdV-Za-hRI" secondAttribute="trailing" constant="-16" id="uTA-tA-FgQ"/>
+                            <constraint firstItem="fdV-Za-hRI" firstAttribute="centerX" secondItem="O5s-Lm-PSF" secondAttribute="centerX" id="yFN-A9-JvK"/>
                         </constraints>
                     </view>
+                    <extendedEdge key="edgesForExtendedLayout" bottom="YES"/>
                     <connections>
-                        <outlet property="clusterDoubleTapGestureRecognizer" destination="6ep-hk-KWr" id="qgX-pt-IfK"/>
-                        <outlet property="clusterSingleTapGestureRecognizer" destination="lWH-hg-hi5" id="gte-GH-uhf"/>
-                        <outlet property="clusterView" destination="WVf-te-9da" id="OZg-9l-EPj"/>
+                        <outlet property="innerRing" destination="O5s-Lm-PSF" id="hw3-iT-ukB"/>
+                        <outlet property="innerRingHeightConstraint" destination="ne4-qS-BgB" id="hmy-Jp-1xr"/>
+                        <outlet property="innerRingWidthConstraint" destination="9L2-tZ-1SU" id="lUq-CY-oCp"/>
                         <outlet property="mapView" destination="fdV-Za-hRI" id="bLr-8T-biY"/>
+                        <outlet property="outerRing" destination="pKD-Nh-s6Q" id="cWp-L7-kgS"/>
+                        <outlet property="outerRingWidthConstraint" destination="hCi-zj-Adq" id="aa8-SR-EIt"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="RUo-cp-lLn" userLabel="First Responder" sceneMemberID="firstResponder"/>
-                <tapGestureRecognizer id="lWH-hg-hi5">
-                    <connections>
-                        <action selector="clusterWasTapped:" destination="w0D-fV-xx9" id="bFq-pe-TH8"/>
-                    </connections>
-                </tapGestureRecognizer>
-                <tapGestureRecognizer numberOfTapsRequired="2" id="6ep-hk-KWr">
-                    <connections>
-                        <action selector="clusterWasTapped:" destination="w0D-fV-xx9" id="cfo-MK-oho"/>
-                    </connections>
-                </tapGestureRecognizer>
             </objects>
             <point key="canvasLocation" x="1309" y="44"/>
         </scene>
