--- a/supercluster/Base.lproj/Main.storyboard
+++ b/supercluster/Base.lproj/Main.storyboard
@@ -17,9 +17,13 @@
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                         <subviews>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="55p-qE-HKk">
+                                <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                                <color key="backgroundColor" red="1" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                            </imageView>
                             <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" directionalLockEnabled="YES" showsHorizontalScrollIndicator="NO" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="cXQ-dY-NQm">
                                 <rect key="frame" x="0.0" y="0.0" width="600" height="605"/>
-                                <color key="backgroundColor" red="0.94509803921568625" green="0.94509803921568625" blue="0.94509803921568625" alpha="1" colorSpace="calibratedRGB"/>
+                                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                                 <collectionViewLayout key="collectionViewLayout" id="znK-yq-r3A" customClass="RFQuiltLayout"/>
                                 <cells>
                                     <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="PostView" id="FBE-iV-EeK">
@@ -40,9 +44,10 @@
                             <view alpha="0.95000000000000018" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="APW-Tf-ORX">
                                 <rect key="frame" x="0.0" y="0.0" width="600" height="60"/>
                                 <subviews>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Place Name" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Kod-n5-3D3">
-                                        <rect key="frame" x="0.0" y="28" width="600" height="24"/>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Kod-n5-3D3">
+                                        <rect key="frame" x="200" y="28" width="200" height="24"/>
                                         <constraints>
+                                            <constraint firstAttribute="width" constant="200" id="juK-x4-oFc"/>
                                             <constraint firstAttribute="height" constant="24" id="ye0-dL-rU7"/>
                                         </constraints>
                                         <fontDescription key="fontDescription" name="Avenir-Heavy" family="Avenir" pointSize="17"/>
@@ -52,26 +57,31 @@
                                 </subviews>
                                 <color key="backgroundColor" red="0.1098039225" green="0.14509804549999999" blue="0.19607843459999999" alpha="1" colorSpace="calibratedRGB"/>
                                 <constraints>
-                                    <constraint firstItem="Kod-n5-3D3" firstAttribute="leading" secondItem="APW-Tf-ORX" secondAttribute="leading" id="7OH-ax-wB4"/>
                                     <constraint firstAttribute="height" constant="60" id="Ptq-fY-Q9t"/>
                                     <constraint firstItem="Kod-n5-3D3" firstAttribute="top" secondItem="APW-Tf-ORX" secondAttribute="top" constant="28" id="bOy-jV-IHb"/>
-                                    <constraint firstAttribute="trailing" secondItem="Kod-n5-3D3" secondAttribute="trailing" id="hTe-rk-Z6u"/>
+                                    <constraint firstAttribute="centerX" secondItem="Kod-n5-3D3" secondAttribute="centerX" id="cp0-H3-Utx"/>
                                 </constraints>
                             </view>
                         </subviews>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
                             <constraint firstItem="cXQ-dY-NQm" firstAttribute="leading" secondItem="kh9-bI-dsS" secondAttribute="leadingMargin" constant="-16" id="5dM-W7-jwq"/>
+                            <constraint firstItem="55p-qE-HKk" firstAttribute="top" secondItem="kh9-bI-dsS" secondAttribute="topMargin" id="IRC-nK-JWx"/>
+                            <constraint firstItem="2fi-mo-0CV" firstAttribute="top" secondItem="55p-qE-HKk" secondAttribute="bottom" id="Mzk-r5-aet"/>
+                            <constraint firstItem="55p-qE-HKk" firstAttribute="leading" secondItem="kh9-bI-dsS" secondAttribute="leadingMargin" constant="-16" id="OaY-k7-R37"/>
                             <constraint firstItem="APW-Tf-ORX" firstAttribute="leading" secondItem="kh9-bI-dsS" secondAttribute="leadingMargin" constant="-16" id="SoW-yl-rcF"/>
                             <constraint firstItem="APW-Tf-ORX" firstAttribute="top" secondItem="kh9-bI-dsS" secondAttribute="topMargin" id="YEn-rN-56c"/>
                             <constraint firstAttribute="trailingMargin" secondItem="APW-Tf-ORX" secondAttribute="trailing" constant="-16" id="cTt-uE-8EC"/>
                             <constraint firstAttribute="bottomMargin" secondItem="cXQ-dY-NQm" secondAttribute="bottom" constant="-5" id="o0n-GD-zAJ"/>
                             <constraint firstAttribute="trailingMargin" secondItem="cXQ-dY-NQm" secondAttribute="trailing" constant="-16" id="wwR-X8-Dwc"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="55p-qE-HKk" secondAttribute="trailing" constant="-16" id="x0I-lo-SFG"/>
                             <constraint firstItem="cXQ-dY-NQm" firstAttribute="top" secondItem="kh9-bI-dsS" secondAttribute="topMargin" id="xof-DW-cVn"/>
                         </constraints>
                     </view>
                     <connections>
+                        <outlet property="backgroundImageView" destination="55p-qE-HKk" id="nfM-Ra-zQP"/>
                         <outlet property="collectionView" destination="cXQ-dY-NQm" id="paB-8b-jxJ"/>
+                        <outlet property="titleLabel" destination="Kod-n5-3D3" id="ee1-mb-qzM"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="x5A-6p-PRh" sceneMemberID="firstResponder"/>
