--- a/supercluster/Base.lproj/Main.storyboard
+++ b/supercluster/Base.lproj/Main.storyboard
@@ -139,7 +139,7 @@
                                 </constraints>
                             </view>
                             <view userInteractionEnabled="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="pKD-Nh-s6Q" customClass="RingView" customModule="supercluster" customModuleProvider="target">
-                                <rect key="frame" x="200" y="200" width="200" height="200"/>
+                                <rect key="frame" x="200" y="210" width="200" height="200"/>
                                 <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                                 <color key="tintColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <constraints>
@@ -153,7 +153,7 @@
                                 </userDefinedRuntimeAttributes>
                             </view>
                             <view userInteractionEnabled="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="O5s-Lm-PSF" customClass="RingView" customModule="supercluster" customModuleProvider="target">
-                                <rect key="frame" x="297" y="297" width="5" height="5"/>
+                                <rect key="frame" x="297" y="307.5" width="5" height="5"/>
                                 <color key="backgroundColor" red="0.13333333333333333" green="0.74509803921568629" blue="0.80000000000000004" alpha="0.20000000000000001" colorSpace="custom" customColorSpace="sRGB"/>
                                 <color key="tintColor" red="0.1333333333" green="0.74509803919999995" blue="0.80000000000000004" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <constraints>
@@ -166,8 +166,8 @@
                                     </userDefinedRuntimeAttribute>
                                 </userDefinedRuntimeAttributes>
                             </view>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="jR1-ng-nQP" customClass="IconButton" customModule="supercluster" customModuleProvider="target">
-                                <rect key="frame" x="472" y="573.5" width="149" height="149"/>
+                            <button opaque="NO" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="jR1-ng-nQP" customClass="IconButton" customModule="supercluster" customModuleProvider="target">
+                                <rect key="frame" x="441" y="542.5" width="210.5" height="210.5"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="149" id="Kx4-tL-6Ck"/>
                                     <constraint firstAttribute="width" constant="149" id="mXX-JE-pH7"/>
@@ -190,9 +190,9 @@
                         <constraints>
                             <constraint firstItem="YKY-U3-CaR" firstAttribute="leading" secondItem="NYC-pZ-Euf" secondAttribute="leadingMargin" constant="-16" id="4my-vi-Ld1"/>
                             <constraint firstAttribute="bottomMargin" secondItem="jR1-ng-nQP" secondAttribute="bottom" constant="-122.5" id="8Dw-nW-bD0"/>
-                            <constraint firstItem="pKD-Nh-s6Q" firstAttribute="centerY" secondItem="fdV-Za-hRI" secondAttribute="centerY" id="CDu-iS-Cm1"/>
+                            <constraint firstItem="pKD-Nh-s6Q" firstAttribute="centerY" secondItem="fdV-Za-hRI" secondAttribute="centerY" constant="10" id="CDu-iS-Cm1"/>
                             <constraint firstItem="pKD-Nh-s6Q" firstAttribute="centerX" secondItem="fdV-Za-hRI" secondAttribute="centerX" id="Ko9-8I-167"/>
-                            <constraint firstItem="fdV-Za-hRI" firstAttribute="centerY" secondItem="O5s-Lm-PSF" secondAttribute="centerY" id="Rws-UT-ckZ"/>
+                            <constraint firstItem="fdV-Za-hRI" firstAttribute="centerY" secondItem="O5s-Lm-PSF" secondAttribute="centerY" constant="-10" id="Rws-UT-ckZ"/>
                             <constraint firstItem="fdV-Za-hRI" firstAttribute="top" secondItem="NYC-pZ-Euf" secondAttribute="topMargin" id="afp-7f-hL7"/>
                             <constraint firstItem="YKY-U3-CaR" firstAttribute="top" secondItem="NYC-pZ-Euf" secondAttribute="topMargin" id="anP-YM-uaW"/>
                             <constraint firstItem="7O6-Ad-r00" firstAttribute="top" secondItem="fdV-Za-hRI" secondAttribute="bottom" id="gtz-Cy-yo4"/>
